--- a/index_PBSscript_generate.html
+++ b/index_PBSscript_generate.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PBS FragPipe Script Generator</title>
+  <subtitle>Make sure workflow, manifest files and output folder are directly inside your mount folder</subtitle>
   <style>
     body {
       font-family: sans-serif;
@@ -40,14 +41,14 @@
 <label>Bind directory (host path)</label>
 <input id="BINDDIR" placeholder="$HOME/LC_MS">
 
-<label>Workflow path</label>
-<input id="WORKFLOW" placeholder="/data/workflow.fp_workflow">
+<label>Workflow file name [.workflow]</label>
+<input id="WORKFLOW" placeholder="workflow.workflow">
 
-<label>Manifest path</label>
-<input id="MANIFEST" placeholder="/data/manifest.txt">
+<label>Manifest file name [.fp_manifest]</label>
+<input id="MANIFEST" placeholder="manifest.manifest">
 
 <label>Output directory</label>
-<input id="OUTPUTDIR" placeholder="/data/output">
+<input id="OUTPUTDIR" placeholder="/output">
 
 <button onclick="generateScript()">Generate PBS Script</button>
 
@@ -75,9 +76,9 @@ export LANG=C
 
 singularity exec --bind __BINDDIR__:/data fragpipe_latest.sif \\
   /data/Fragpipe/bin/fragpipe --headless \\
-    --workflow __WORKFLOW__ \\
-    --manifest __MANIFEST__ \\
-    --workdir __OUTPUTDIR__ \\
+    --workflow /data/__WORKFLOW__ \\
+    --manifest /data/__MANIFEST__ \\
+    --workdir /data/__OUTPUTDIR__ \\
     --ram 256 \\
     --threads 16 \\
     --config-tools-folder /data/Fragpipe/tools \\
@@ -88,13 +89,21 @@ singularity exec --bind __BINDDIR__:/data fragpipe_latest.sif \\
     script = script.replaceAll(`__${key}__`, values[key]);
   }
 
+  // Get current date in DDMMYYYY
+  const today = new Date();
+  const day = String(today.getDate()).padStart(2, '0');
+  const month = String(today.getMonth() + 1).padStart(2, '0');
+  const year = today.getFullYear();
+  const formattedDate = `${day}${month}${year}`;
+
   const blob = new Blob([script], { type: "text/plain" });
   const link = document.createElement("a");
   link.href = URL.createObjectURL(blob);
-  link.download = "pbs_fragpipe_job.sh";
+  link.download = `pbs_fragpipe_script_${formattedDate}.sh`;
   link.click();
 }
 </script>
+
 
 </body>
 </html>
