--- a/PBSscript_generate.html
+++ b/PBSscript_generate.html
@@ -40,10 +40,10 @@
 <label>Job name</label>
 <input id="JOBNAME" placeholder="jobname">
 
-<label>Home directory (working directory)</label>
+<label>Home directory</label>
 <input id="HOMEDIR" placeholder="$HOME">
 
-<label>Bind directory (host path)</label>
+<label>Bind directory</label>
 <input id="BINDDIR" placeholder="$HOME/LC_MS">
 
 <label>Workflow file name [.workflow]</label>
@@ -52,7 +52,7 @@
 <label>Manifest file name [.fp_manifest]</label>
 <input id="MANIFEST" placeholder="manifest.manifest">
 
-<label>Output directory</label>
+<label>Output Result directory</label>
 <input id="OUTPUTDIR" placeholder="/output">
 
 <label>Script Preview</label>
